# edelta

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  config  main.cc
client/include/: BasicRingBuffer.hh  CDCodec.hh  CryptoPrimitive.hh  conf.hh  downloader.hh  socket.hh  uploader.hh
client/src/: CDCodec.cc  CryptoPrimitive.cc  chunker.cc  downloader.cc  encoder.cc  rabin.cpp  socket.cc  uploader.cc
server/: CMakeLists.txt  config.json  main.cpp
server/lib/delta/: CMakeLists.txt
server/lib/delta/include/: delta.h  rabin.h  spooky.h
server/lib/delta/lib/xdelta3/: Makefile  Makefile.in  aclocal.m4  config.h  config.status  configure  libtool  xdelta3  xdelta3-main.h  xdelta3.c  xdelta3.h  xdelta3checksum  xdelta3decode  xdelta3regtest
server/lib/delta/lib/xdelta3/.deps/: xdelta3-xdelta3.Po  xdelta3decode-xdelta3.Po
server/lib/delta/lib/xdelta3/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.3
server/lib/delta/lib/xdelta3/m4/: ax_python_devel.m4  libtool.m4
server/lib/delta/lib/xdelta3/testing/.deps/: xdelta3checksum-checksum_test.Po  xdelta3checksum-checksum_test_c.Po  xdelta3regtest-regtest.Po  xdelta3regtest-regtest_c.Po
server/lib/delta/src/: delta.c  rabin.c  spook.c
server/lib/leveldb/: README.md
server/lib/leveldb/db/: db_impl.cc  version_set.cc
server/lib/leveldb/doc/: index.md  log_format.md
server/lib/leveldb/include/leveldb/: env.h
server/lib/leveldb/util/: crc32c.cc
server/lib/sockpp/: CHANGELOG.md  Doxyfile  README.md
server/lib/sockpp/include/sockpp/: acceptor.h  connector.h  datagram_socket.h  socket.h  stream_socket.h
server/lib/thread-pool/: BS_thread_pool.hpp  CHANGELOG.md  README.md
server/src/backend/: backend_facade.hpp  container.hpp  db_wrapper.hpp  name_dispenser.hpp
server/src/comm/: server.hpp  services.hpp
server/src/dedup/: client_interface.hpp  dedup_core.hpp  delta.hpp  peer_interface.hpp  peer_mediator.hpp
server/src/def/: benchmark.hpp  config.hpp  exception.hpp  initializer.hpp  log.hpp  span.hpp  struct.hpp  util.hpp
